* removed jcryption library from "main" fieldnotes app (only needs to be in spoton.html)
* minified scripts (and added .min to existing filenames where appropriate)
* organized libraries into lib folder
* bugfix: location description echoed on form submit
* "friendly" names on form submit automatically truncate array notation '[]'
* add kml feed downloads

v2.2

* cleaned up interface: categories on home screen and tweaks to wording
* refactored location: added a description field and lat / lon values no longer editable
* refactored insert.php, markers.json.php
* reduce decimal places to 3 for lat, lon display
* added SpotOn integration
  - gets info from SpotOn via querystring; stores all values and populates some fields
  - select fields added to JSON feed
  - display lat, lon in UI
  - changed code in plugins.js and spoton.html that parses spoton info
  - spoton location overrides device location for display purposes
* added options to filter geojson feed - after, before, between
* added Tsunami, Building, Lifelines forms
* added startup image for iPhone 5
* added marker clusterer / spiderfier
* added php no-cache header to markers.json.php and insert.php
* updated jquery (1.8.0)
* updated leaflet (0.4.4)
* changed google static map to mapbox b/c google is unreliable
* changed "open maps app" link to apple maps
* changed padding value on input fields to allow more room for labels
* bugfix: results display cleaned up for entries w/ multiple lines, long labels
* bugfix: decimals now allowed on applicable fields (db changed to float; added step attribute)
* bugfix: label attributes for photo fields didn't match id values
* bugfix: if user requesting a specific screen (i.e. hashtag), go there instead of screen stored in localstorage
* patch: iOS 6 uses milliseconds for geo timestamp; test for this and divide by 1000
* now shows photo upload on iOS
* now shows error log on sync screen when it fails
* ran plugins.js thru jslint

v2.1
